# ondotori-ble

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lefthook.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: device-support.yml
.github/workflows/: ci.yml  docs.yml  release.yml  test-publish.yml
docs/: api.md  contributing.md  index.md  protocol.md  quickstart.md  releasing.md  reliability.md  room-analysis.md  server.md  versioning.md
docs/manuals/: README.md
src/ondotori_ble/: __init__.py  errors.py  models.py  parser.py  scanner.py
tests/: test_fuzz.py  test_models.py  test_parser.py  test_privacy.py  test_scanner.py
tests/fixtures/: observed-c3-synthetic.json
